# sessonix

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  TODOS.md  index.html  package-lock.json  package.json  tessl.json  update.sh  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/skills/: tessl__code-review  tessl__requirement-gathering  tessl__spec-verification  tessl__spec-writer  tessl__typescript-style  tessl__work-review
.github/workflows/: ci.yml  homebrew.yml  release.yml
docs/: agent-deck-analysis.md  aimux-analysis.md
scripts/: build-dmg.sh
specs/: git-diff-viewer.spec.md  telegram-bridge.spec.md  window-state-persistence.spec.md  windows-support.spec.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: hook-handler.sh
src-tauri/src/: db.rs  diff_manager.rs  error.rs  git_manager.rs  hooks.rs  jsonl.rs  lib.rs  main.rs  pty_manager.rs  ring_buffer.rs  session_manager.rs  types.rs  window_state.rs
src-tauri/src/adapters/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  shell.rs
src-tauri/src/telegram_bridge/: api.rs  events.rs  markdown.rs  mod.rs  settings.rs
src/__tests__/: AgentIcon.test.tsx  DiffViewer.test.tsx  SessionLauncher.test.tsx  Sidebar.test.tsx  SummaryBar.test.tsx  TaskCreateModal.test.tsx  TaskGroup.test.tsx  WelcomeWizard.test.tsx  agentLauncher.test.ts  cursor-agent.test.ts  projectStore.test.ts  sessionStore.diff-pseudo.test.ts  sessionStore.test.ts  setup.ts  slugify.test.ts  (+3 more)
(+54 files in other folders)
