[package]
name = "sessonix"
version = "0.9.5"
edition = "2021"

[lib]
name = "sessonix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
which = "7"
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs", version = "0.0.0" }
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
